F3 [#1](https://github.com/ilkhoeri/oeri/issues/1#issue-2811456268)
`useMeasureScrollbar` correction

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@
     & [data-pm] {
       @apply relative flex items-center justify-center;
       &::before {
-        @apply content-[''] relative inline-block h-[--h,1em] w-[--w,1em] max-md:mr-[5px] md:mr-2 mb-[-.2em] [background:var(--icon)_no-repeat_center/contain] [filter:var(--filter,brightness(0.5))];
+        @apply content-[''] relative inline-block h-[--h,1em] w-[--w,1em] max-md:mr-[0.25rem] md:mr-2 mb-[-.2em] [background:var(--icon)_no-repeat_center/contain] [filter:var(--filter,brightness(0.5))];
       }
       &[data-active="true"] {
         @apply [--filter:none];
@@ -39,7 +39,7 @@
     }
     & [data-pm="npm"] {
       --h: 1.5em;
-      --w: 1.75em;
+      --w: 1.5em;
       --icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 32 32'%3E%3Cpath fill='%23cb3837' d='M2 10.555h28v9.335H16v1.556H9.778v-1.557H2Zm1.556 7.779h3.111v-4.668h1.555v4.667h1.556v-6.222H3.556Zm7.778-6.223v7.779h3.111v-1.556h3.111v-6.223Zm3.111 1.556H16v3.112h-1.556Zm4.667-1.556v6.223h3.111v-4.668h1.556v4.667h1.556v-4.667h1.556v4.667h1.556v-6.222Z'/%3E%3C/svg%3E");
     }
     & [data-pm="yarn"] {
